Bug 1.11: Button overflow made responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,3 +186,11 @@ main {
 .fairy {
     background: var(--fairy);
 }
+
+/* RESPONSIVE */
+@media all and (max-width: 600px) {
+    .pokemon-list__pokemon-card {
+        margin-block: 20px;
+        margin-inline: 0;
+    }
+}
